--- a/src/App.module.css
+++ b/src/App.module.css
@@ -69,7 +69,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,7 +90,71 @@
 }
 
 .app .curtain .settings {
-    width: 40%;
+    width: 80%;
     height: 80%;
-    background-color: red;
+    background-color: var(--colorBG);
+    border-radius: 1rem;
+    margin: 0px;
+}
+
+.settings .header {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--colorMain);
+    border-radius: 1rem 1rem 0 0;
+}  
+
+.settings .header svg {
+    width: 4rem;
+    height: 4rem;
+    margin: 1rem;
+    stroke: var(--colorWhite);
+}
+
+.settings .header h1 {
+    margin: 0px;
+    font-size: 2rem;
+}
+
+.settings .header button {
+    background-color: var(--colorSecondary);
+    outline: 0px;
+    border: 0px;
+    margin-right: 1rem;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.settings .header button svg {
+    height: 1rem;
+    width: 1rem;
+}
+
+.settings .table {
+    margin: 1rem 1rem 0 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: var(--colorBG);
+    overflow-y: auto;
+}
+
+.settings .table div {
+    width: 100%;
+    height: 2rem;
+    margin-bottom: .5rem;
+}
+
+.settings .table div input{
+    width: 90%;
+    height: 100%;
+    background-color: var(--colorWhite);
+    color: var(--colorBG);
+    outline: 0px;
+    border: 0px;
+    border-radius: .25em;
 }
