--- a/src/App.module.css
+++ b/src/App.module.css
@@ -135,10 +135,15 @@
     width: 1rem;
 }
 
+.settings .settingsContainer {
+    height: calc(100% - 6rem);
+    overflow-y: scroll;
+}
+
 .settings .table {
     margin: 1rem 1rem 0 1rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 2rem;
     background-color: var(--colorBG);
     overflow-y: auto;
 }
@@ -149,12 +154,36 @@
     margin-bottom: .5rem;
 }
 
+.settings .table button {
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--colorMain);
+    border: 0px;
+    outline: 0px;
+    border-radius: .25rem;
+}
+
+.settings .table button svg {
+    stroke: var(--colorWhite);
+    height: 1.5rem;
+}
+
+.settings .table .addButton {
+    grid-column: span 3;
+    height: 2rem;
+    width: 15ch;
+    margin: 10px auto auto auto;
+}
+
 .settings .table div input{
     width: 90%;
     height: 100%;
     background-color: var(--colorWhite);
     color: var(--colorBG);
     outline: 0px;
-    border: 0px;
+    border: 1px solid var(--colorWhite);
     border-radius: .25em;
 }
