--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,193 +1,285 @@
 :root {
-  --dropShadowUnit: 0.2rem;
-  --dropShadow: 0px 0px var(--dropShadowUnit) rgb(5, 5, 5);
-  --dropShadowLight: 0px 0px var(--dropShadowUnit) rgba(255, 255, 255, 0.501);
+    --dropShadowUnit: 0.2rem;
+    --dropShadow: 0px 0px var(--dropShadowUnit) rgb(5, 5, 5);
+    --dropShadowLight: 0px 0px var(--dropShadowUnit) rgba(255, 255, 255, 0.501);
 
-  --dropShadowText: 0px 0px calc(var(--dropShadowUnit) / 2) rgb(5, 5, 5);
-  --dropShadowLightText: 0px 0px calc(var(--dropShadowUnit) / 2) rgba(255, 255, 255, 0.501);
+    --dropShadowText: 0px 0px calc(var(--dropShadowUnit) / 2) rgb(5, 5, 5);
+    --dropShadowLightText: 0px 0px calc(var(--dropShadowUnit) / 2) rgba(255, 255, 255, 0.501);
 }
 
 .app {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: var(--gradientBG);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--gradientBG);
 }
 
 .app .textInput {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .app .textInput input {
-  margin-bottom: 1rem;
-  height: 5rem;
-  width: 20rem;
-  border-radius: 5px;
-  font-size: 3rem;
-  color: var(--colorWhite);
-  border: 4px solid var(--colorMain);
-  background: var(--colorMainDark);
-  position: relative;
-  text-align: center;
-  box-shadow: var(--dropShadow);
-  position: relative;
+    margin-bottom: 1rem;
+    height: 5rem;
+    width: 20rem;
+    border-radius: 5px;
+    font-size: 3rem;
+    color: var(--colorWhite);
+    border: 4px solid var(--colorMain);
+    background: var(--colorMainDark);
+    position: relative;
+    text-align: center;
+    box-shadow: var(--dropShadow);
+    position: relative;
 }
 
 .app .textInput input:focus {
-  outline: none;
+    outline: none;
 }
 
 .app .textInput button {
-  margin: 0px;
-  height: 3rem;
-  font-size: 1.5rem;
-  width: 10rem;
-  border-radius: 5px;
-  background: var(--colorMain);
-  color: var(--colorMainDark);
-  border: none;
-  user-select: none;
-  transition: color 0.125s ease-out;
-  box-shadow: var(--dropShadow);
-  text-shadow: var(--dropShadowText);
+    margin: 0px;
+    height: 3rem;
+    font-size: 1.5rem;
+    width: 10rem;
+    border-radius: 5px;
+    background: var(--colorMain);
+    color: var(--colorMainDark);
+    border: none;
+    user-select: none;
+    transition: color 0.125s ease-out;
+    box-shadow: var(--dropShadow);
+    text-shadow: var(--dropShadowText);
 }
 
 .app .textInput button:active {
-  color: var(--colorSecondary);
-  box-shadow: var(--dropShadowLight);
-  text-shadow: var(--dropShadowLightText);
+    color: var(--colorSecondary);
+    box-shadow: var(--dropShadowLight);
+    text-shadow: var(--dropShadowLightText);
 }
 
 .app .result {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
 }
 
 .app .curtain {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #00000025;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #00000025;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .app .curtain .settings {
-  width: 80%;
-  height: 80%;
-  background-color: var(--colorBG);
-  border-radius: 1rem;
-  margin: 0px;
+    width: min(100%, 40rem);
+    height: min(100%, 60rem);
+    background-color: var(--colorBG);
+    border-radius: 1rem;
+    margin: 0px;
 }
 
 .settings .header {
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--colorMain);
-  border-radius: 1rem 1rem 0 0;
-}  
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--colorMain);
+    border-radius: 1rem 1rem 0 0;
+}
+
+.settings {
+    position: relative;
+}
 
 .settings .header svg {
-  width: 4rem;
-  height: 4rem;
-  margin: 1rem;
-  stroke: var(--colorWhite);
+    width: 4rem;
+    height: 4rem;
+    margin: 1rem;
+    stroke: var(--colorWhite);
 }
 
 .settings .header h1 {
-  margin: 0px;
-  font-size: 2rem;
+    margin: 0px;
+    font-size: 2rem;
+    text-align: center;
 }
 
 .settings .header button {
-  background-color: var(--colorSecondary);
-  outline: 0px;
-  border: 0px;
-  margin-right: 1rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px;
+    background-color: var(--colorDanger);
+    outline: 0px;
+    border: 0px;
+    margin: 1rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
 }
 
 .settings .header button svg {
-  height: 1rem;
-  width: 1rem;
-  padding: 0px;
-  transform: scale(1.4);
+    height: 1rem;
+    width: 1rem;
+    padding: 0px;
+    transform: scale(1.4);
 }
 
 .settings .settingsContainer {
-  height: calc(100% - 6rem);
-  overflow-y: scroll;
+    height: calc(100% - 11rem);
+    overflow-y: scroll;
+    padding: 1rem 1rem 5rem 1rem;
 }
 
-.settings .table {
-  margin: 1rem 1rem 0 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 2rem;
-  background-color: var(--colorBG);
-  overflow-y: auto;
+.settingsContainer .wordEditor {
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
-.settings .table div {
-  width: 100%;
-  height: 2rem;
-  margin-bottom: .5rem;
+.settingsContainer .wordEditor .wordHeader {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    border-radius: 0.5rem 0.5rem 0 0;
+    justify-content: space-between;
+    background-color: var(--colorMain);
 }
 
-.settings .table button {
-  width: 100%;
-  height: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--colorMain);
-  border: 0px;
-  outline: 0px;
-  border-radius: .25rem;
-  padding: 0px;
+.wordHeader input {
+    background-color: var(--colorBG);
+    width: 15ch;
+    border: 0px;
+    margin: 0.5rem;
+    border-radius: 5px;
+    padding-left: 1ch;
 }
 
-.settings .table button svg {
-  stroke: var(--colorWhite);
-  height: 1.5rem;
+.wordHeader span {
+    width: 15ch;
+    font-size: 1rem;
+    border: 0px;
+    margin: auto 0.25rem;
+    border-radius: 5px;
+    padding-left: 1ch;
+    font-weight: 700;
+    text-transform: capitalize;
 }
 
-.settings .table .addButton {
-  grid-column: span 3;
-  height: 2rem;
-  width: 15ch;
-  margin: 10px auto auto auto;
+.wordHeader button {
+    height: calc(100% - 1rem);
+    width: 2rem;
+    border: 0px;
+    margin: 0.5rem;
+    background-color: var(--colorDanger);
+    border-radius: 5px;
 }
 
-.settings .table div input{
-  width: 90%;
-  height: 100%;
-  background-color: var(--colorWhite);
-  color: var(--colorBG);
-  outline: 0px;
-  border: 1px solid var(--colorWhite);
-  border-radius: .25em;
+.wordHeader button svg {
+    width: 100%;
+    height: 100%;
+}
+
+.settingsContainer .wordEditor .wordInfo {
+    width: calc(100% - 4px - 1rem);
+    height: 2rem;
+    background-color: none;
+    border: 2px solid var(--colorMain);
+    border-radius: 0 0 0.5rem 0.5rem;
+    display: flex;
+    padding: 0.5rem;
+}
+
+.wordInfo input,
+.wordInfo button {
+    height: 2rem;
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 5px;
+    background-color: var(--colorBGLight);
+    margin-right: 5px;
+}
+
+.wordInfo input {
+    padding-left: 1ch;
+}
+
+.wordInfo button {
+    width: 2rem;
+}
+
+.wordInfo button svg {
+    fill: var(--colorWhite);
+}
+
+.wordInfo input[type='color'] {
+    width: 2rem;
+    position: relative;
+    padding-left: initial;
+    padding: 2px;
+}
+
+.wordInfo input[type='color']::after {
+    content: 'T';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wordInfo input[type='number'] {
+    width: 5rem;
+    position: relative;
+}
+
+.settingsContainer > button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1rem;
+    width: 4rem;
+    height: 4rem;
+    background-color: var(--colorMain);
+    border: 0px;
+    border-radius: 100%;
+}
+
+.settingsContainer > button svg {
+    transform: scale(0.8);
+}
+
+@media screen and (max-width: 40rem) {
+    .settings {
+        border-radius: 0px !important;
+    }
+
+    .settings .header {
+        border-radius: 0px;
+    }
+
+    .settings .settingsContainer {
+        border-radius: 0px;
+    }
 }
