--- a/src/App.module.css
+++ b/src/App.module.css
@@ -75,6 +75,12 @@
     font-size: 4rem;
 }
 
+.app .result h1 {
+    max-width: 100%;
+    font-size: 5rem;
+    text-align: center;
+}
+
 .app .curtain {
     position: absolute;
     top: 0;
