--- a/src/App.module.css
+++ b/src/App.module.css
@@ -136,7 +136,7 @@
 
 .settings .header {
     width: 100%;
-    padding-top: 2rem;
+    padding-top: 0px;
     height: 5rem;
     display: flex;
     justify-content: space-between;
@@ -189,7 +189,7 @@
 .settings .settingsContainer {
     height: calc(100% - 13rem);
     overflow-y: scroll;
-    padding: 1rem 1rem 5rem 1rem;
+    padding: 1rem 1rem 7rem 1rem;
 }
 
 .settingsContainer .wordEditor {
@@ -249,7 +249,7 @@
     box-shadow: var(--dropShadow);
 }
 
-.wordHeader button.delete svg {
+.wordHeader button svg {
     width: 100%;
     height: 100%;
 }
@@ -315,7 +315,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    margin: 1rem;
+    margin: 1.5rem;
     width: 4rem;
     height: 4rem;
     background-color: var(--colorMain);
@@ -337,9 +337,11 @@
 
     .settings .header {
         border-radius: 0px;
+        padding-top: 3rem;
     }
 
     .settings .settingsContainer {
         border-radius: 0px;
+        height: calc(100% - 16rem);
     }
 }
