--- a/src/App.module.css
+++ b/src/App.module.css
@@ -151,9 +151,9 @@
 }
 
 .settings .header svg {
-    width: 4rem;
-    height: 4rem;
-    margin: 1rem;
+    width: 3.5rem;
+    height: 3.5rem;
+    padding: 1rem;
     stroke: var(--colorWhite);
 }
 
@@ -176,19 +176,22 @@
     justify-content: center;
     align-items: center;
     padding: 0px;
-    box-shadow: var(--dropShadow);
+    box-shadow: var(--dropShadowText);
 }
 
 .settings .header button svg {
     height: 1rem;
     width: 1rem;
     padding: 0px;
+    margin: 1rem;
     transform: scale(1.4);
 }
 
 .settings .settingsContainer {
     height: calc(100% - 13rem);
     overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: proximity;
     padding: 1rem 1rem 7rem 1rem;
 }
 
@@ -233,6 +236,7 @@
 
 .wordHeader button {
     height: calc(100% - 1rem);
+    padding: 0px;
     width: 2rem;
     border: 0px;
     margin: 0.5rem 0.5rem 0.5rem 0;
@@ -250,8 +254,12 @@
 }
 
 .wordHeader button svg {
-    width: 100%;
-    height: 100%;
+    width: 1.65rem;
+    height: 1.65rem;
+}
+
+.wordHeader button.delete svg {
+  stroke: var(--colorWhite);
 }
 
 .settingsContainer .wordEditor .wordInfo {
@@ -316,12 +324,13 @@
     bottom: 0;
     right: 0;
     margin: 1.5rem;
+    padding: 0px;
     width: 4rem;
     height: 4rem;
     background-color: var(--colorMain);
     border: 0px;
     border-radius: 100%;
-    box-shadow: var(--dropShadow);
+    box-shadow: var(--dropShadowText);
 }
 
 .settingsContainer > button svg {
@@ -337,11 +346,11 @@
 
     .settings .header {
         border-radius: 0px;
-        padding-top: 3rem;
+        padding-top: 2.5rem;
     }
 
     .settings .settingsContainer {
         border-radius: 0px;
-        height: calc(100% - 16rem);
+        height: calc(100% - 15.5rem);
     }
 }
