--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,13 @@ code {
     --colorSecondary: #27965b;
 
     --gradientMainSecondary: linear-gradient(180deg, var(--colorMain) 0%, var(--colorSecondary) 100%);
-    --gradientBG: linear-gradient(180deg, var(--colorBlack) 0%, var(--colorMainDark) 100%);
+    /* --gradientBG: linear-gradient(180deg, var(--colorBlack) 0%, var(--colorMainDark) 100%); */
+    --gradientBG: radial-gradient(circle at bottom, var(--colorMainDark) 0%, var(--colorBG) 65%, var(--colorBlack) 100%);
 
     --colorBG: #0a0a0a;
     --colorBGLight: #161616;
     --colorBlack: #000000;
     --colorWhite: hsl(149, 64%, 88%);
     --colorDanger: #792525;
+    --colorDangerLight: hsl(0, 53%, 45%);
 }
