--- a/src/App.module.css
+++ b/src/App.module.css
@@ -192,6 +192,54 @@
     padding: 1rem 1rem 7rem 1rem;
 }
 
+.settingsContainer .screenTimeInput {
+    width: calc(100%);
+    height: 3rem;
+    margin-bottom: 1.25rem;
+    display: flex;
+    align-items: center;
+}
+
+.settingsContainer .screenTimeInput input {
+    height: calc(100% - 4px);
+    width: calc(100% - 4.5rem - 4px - 1ch);
+    padding: 0px;
+    margin: 0px;
+    outline: 0px;
+    font-size: 1.5rem;
+    text-align: right;
+    background-color: var(--colorBG);
+    border: 0.5rem solid var(--colorMain);
+    border-top: 2px solid var(--colorMain);
+    border-left: 2px solid var(--colorMain);
+    border-right: 0px;
+    padding: 0px calc(1.8rem + 1ch) 0px 0px;
+    border-radius: 0.5rem 0px 0px 0.5rem;
+    position: relative;
+}
+
+.settingsContainer .screenTimeInput input[type='number']::-webkit-inner-spin-button,
+.settingsContainer .screenTimeInput input[type='number']::-webkit-outer-spin-button {
+    display: none;
+}
+
+.settingsContainer .screenTimeInput span {
+    position: absolute;
+    left: calc(100% - 6rem - 4px);
+    color: var(--colorGray);
+}
+
+.settingsContainer .screenTimeInput svg {
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: var(--colorMain);
+    border-radius: 100%;
+    padding: 0px;
+    transform: scale(1.7);
+    stroke: var(--colorMainDark);
+    fill: var(--colorWhite);
+}
+
 .settingsContainer .wordEditor {
     width: 100%;
     margin-bottom: 1rem;
