--- a/src/App.module.css
+++ b/src/App.module.css
@@ -189,10 +189,15 @@
 
 .settings .settingsContainer {
     height: calc(100% - 13rem);
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.settings .settingsContainer .words {
     overflow-y: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: proximity;
-    padding: 1rem 1rem 7rem 1rem;
+    height: calc(100% - 3rem);
+    padding-bottom: 5rem;
 }
 
 .settingsContainer .screenTimeInput {
@@ -205,7 +210,7 @@
 
 .settingsContainer .screenTimeInput input {
     height: calc(100% - 4px);
-    width: calc(100% - 4.5rem - 4px - 1ch);
+    width: calc(100% - 4.5rem - 4px - 3.75ch);
     padding: 0px;
     margin: 0px;
     outline: 0px;
@@ -214,10 +219,10 @@
     background-color: var(--colorBG);
     border: 0.5rem solid var(--colorMain);
     border-top: 2px solid var(--colorMain);
-    border-left: 2px solid var(--colorMain);
-    border-right: 0px;
-    padding: 0px calc(1.8rem + 1ch) 0px 0px;
-    border-radius: 0.5rem 0px 0px 0.5rem;
+    border-right: 2px solid var(--colorMain);
+    border-left: 0px;
+    padding: 0px 2.75ch 0px calc(1.8rem + 1ch);
+    border-radius: 0px 0.5rem 0.5rem 0px;
     position: relative;
 }
 
@@ -228,7 +233,7 @@
 
 .settingsContainer .screenTimeInput span {
     position: absolute;
-    left: calc(100% - 6rem - 4px);
+    right: 3ch;
     color: var(--colorGray);
 }
 
@@ -241,6 +246,8 @@
     transform: scale(1.7);
     stroke: var(--colorMainDark);
     fill: var(--colorWhite);
+    margin-left: .5rem;
+    z-index: 1;
 }
 
 .settingsContainer .wordEditor {
@@ -367,7 +374,7 @@
     position: relative;
 }
 
-.settingsContainer > button {
+.settingsContainer .words > button {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -381,7 +388,7 @@
     box-shadow: var(--dropShadowText);
 }
 
-.settingsContainer > button svg {
+.settingsContainer .words > button svg {
     transform: scale(0.8);
 }
 
