--- a/src/App.module.css
+++ b/src/App.module.css
@@ -88,6 +88,7 @@
     font-family: monospace;
     text-align: center;
     animation: jiggle 0.25s ease-in-out;
+    animation-delay: .25s;
 }
 
 @keyframes jiggle {
@@ -124,6 +125,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: opacity .25s ease-out;
+}
+
+@keyframes opacity {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .app .curtain .settings {
@@ -132,6 +143,19 @@
     background-color: var(--colorBG);
     border-radius: 1rem;
     margin: 0px;
+    overflow: none;
+    animation: dropDown .35s ease-out;
+}
+
+@keyframes dropDown {
+    from {
+        transform: translateY(-100vh);
+        user-select: none;
+    }
+    to {
+        transform: translateY(0);
+        user-select: initial;
+    }
 }
 
 .settings .header {
@@ -190,12 +214,12 @@
 .settings .settingsContainer {
     height: calc(100% - 13rem);
     padding: 1rem 1rem 1rem 1rem;
+    animation-delay: .125s;
 }
 
 .settings .settingsContainer .words {
     overflow-y: scroll;
     scroll-behavior: smooth;
-    scroll-snap-type: proximity;
     height: calc(100% - 3rem);
     padding-bottom: 5rem;
 }
@@ -204,13 +228,29 @@
     width: calc(100%);
     height: 3rem;
     margin-bottom: 1.25rem;
+    margin-top: .25rem;
     display: flex;
     align-items: center;
 }
 
+.settingsContainer .screenTimeInput.animated {
+    animation: timeDrop .25s ease-out;
+    animation-delay: .35s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes timeDrop {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .settingsContainer .screenTimeInput input {
     height: calc(100% - 4px);
-    width: calc(100% - 4.5rem - 4px - 3.75ch);
+    width: calc(100% - 4.5rem - 4px);
     padding: 0px;
     margin: 0px;
     outline: 0px;
@@ -221,7 +261,7 @@
     border-top: 2px solid var(--colorMain);
     border-right: 2px solid var(--colorMain);
     border-left: 0px;
-    padding: 0px 2.75ch 0px calc(1.8rem + 1ch);
+    padding: 0px 2.25ch 0px 1ch;
     border-radius: 0px 0.5rem 0.5rem 0px;
     position: relative;
 }
@@ -233,7 +273,7 @@
 
 .settingsContainer .screenTimeInput span {
     position: absolute;
-    right: 3ch;
+    right: 2.5ch;
     color: var(--colorGray);
 }
 
@@ -254,6 +294,25 @@
     width: 100%;
     margin-bottom: 1rem;
     box-shadow: var(--dropShadow);
+}
+
+.settingsContainer .wordEditor.animated {
+    animation: slideInLeft .25s ease-out;
+    animation-delay: calc(.4s + (.1s * var(--data-delay-multiply)));
+    animation-fill-mode: backwards;
+}
+
+@keyframes slideInLeft {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+        user-select: none;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+        user-select: initial;
+    }
 }
 
 .settingsContainer .wordEditor .wordHeader {
@@ -388,6 +447,28 @@
     box-shadow: var(--dropShadowText);
 }
 
+.settingsContainer .words > button.animated {
+    animation: buttonAttention .25s ease-in-out;
+    animation-delay: .75s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes buttonAttention {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    85% {
+        transform: scale(1.03);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .settingsContainer .words > button svg {
     transform: scale(0.8);
 }
@@ -407,5 +488,24 @@
     .settings .settingsContainer {
         border-radius: 0px;
         height: calc(100% - 15.5rem);
+    }
+
+    .settings .header.animated {
+        animation: headerDrop .25s ease-out;
+        animation-delay: .25s;
+        animation-fill-mode: backwards;
+    }
+    
+    @keyframes headerDrop {
+        from {
+            transform: translateY(-5rem);
+            user-select: none;
+            opacity: 0;
+        }
+        to {
+            transform: translateY(0);
+            user-select: initial;
+            opacity: 1;
+        }
     }
 }
