--- a/src/App.module.css
+++ b/src/App.module.css
@@ -88,7 +88,7 @@
     font-family: monospace;
     text-align: center;
     animation: jiggle 0.25s ease-in-out;
-    animation-delay: .25s;
+    animation-delay: 0.25s;
 }
 
 @keyframes jiggle {
@@ -125,7 +125,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: opacity .25s ease-out;
+    animation: opacity 0.25s ease-out;
 }
 
 @keyframes opacity {
@@ -144,7 +144,7 @@
     border-radius: 1rem;
     margin: 0px;
     overflow: none;
-    animation: dropDown .35s ease-out;
+    animation: dropDown 0.35s ease-out;
 }
 
 @keyframes dropDown {
@@ -214,28 +214,32 @@
 .settings .settingsContainer {
     height: calc(100% - 13rem);
     padding: 1rem 1rem 1rem 1rem;
-    animation-delay: .125s;
+    animation-delay: 0.125s;
 }
 
 .settings .settingsContainer .words {
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-behavior: smooth;
     height: calc(100% - 3rem);
     padding-bottom: 5rem;
+}
+
+.settings .settingsContainer .words::-webkit-scrollbar {
+    display: none;
 }
 
 .settingsContainer .screenTimeInput {
     width: calc(100%);
     height: 3rem;
     margin-bottom: 1.25rem;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
     display: flex;
     align-items: center;
 }
 
 .settingsContainer .screenTimeInput.animated {
-    animation: timeDrop .25s ease-out;
-    animation-delay: .35s;
+    animation: timeDrop 0.25s ease-out;
+    animation-delay: 0.35s;
     animation-fill-mode: backwards;
 }
 
@@ -286,7 +290,7 @@
     transform: scale(1.7);
     stroke: var(--colorMainDark);
     fill: var(--colorWhite);
-    margin-left: .5rem;
+    margin-left: 0.5rem;
     z-index: 1;
 }
 
@@ -297,8 +301,8 @@
 }
 
 .settingsContainer .wordEditor.animated {
-    animation: slideInLeft .25s ease-out;
-    animation-delay: calc(.4s + (.1s * var(--data-delay-multiply)));
+    animation: slideInLeft 0.25s ease-out;
+    animation-delay: calc(0.4s + (0.1s * var(--data-delay-multiply)));
     animation-fill-mode: backwards;
 }
 
@@ -373,7 +377,7 @@
 }
 
 .wordHeader button.delete svg {
-  stroke: var(--colorWhite);
+    stroke: var(--colorWhite);
 }
 
 .settingsContainer .wordEditor .wordInfo {
@@ -448,8 +452,8 @@
 }
 
 .settingsContainer .words > button.animated {
-    animation: buttonAttention .25s ease-in-out;
-    animation-delay: .75s;
+    animation: buttonAttention 0.25s ease-in-out;
+    animation-delay: 0.75s;
     animation-fill-mode: backwards;
 }
 
@@ -491,11 +495,11 @@
     }
 
     .settings .header.animated {
-        animation: headerDrop .25s ease-out;
-        animation-delay: .25s;
+        animation: headerDrop 0.25s ease-out;
+        animation-delay: 0.25s;
         animation-fill-mode: backwards;
     }
-    
+
     @keyframes headerDrop {
         from {
             transform: translateY(-5rem);
