--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,8 +9,8 @@
 }
 
 .app {
-    height: 100vh;
-    width: 100vw;
+    height: calc((var(--screen-height) * 1px) - 1px);
+    width: calc((var(--screen-width) * 1px) - 1px);
     display: flex;
     justify-content: center;
     align-items: center;
